@@ -52,7 +52,12 @@ WARNING_DISABLE_GCC("-Wcast-qual")
 static int rand_s(unsigned int* randomValue)
 {
 	typedef BOOLEAN (WINAPI *SystemFunction036)(PVOID Buffer, ULONG Size);
-	const SystemFunction036 RtlGenRandomPtr = (SystemFunction036)GetProcAddress(GetModuleHandle(L"advapi32"), "SystemFunction036");
+	static SystemFunction036 RtlGenRandomPtr = (void*)-1;
+	if (RtlGenRandomPtr == (void*)-1)
+	{
+		RtlGenRandomPtr = (SystemFunction036)GetProcAddress(GetModuleHandle(L"advapi32"), "SystemFunction036");
+	}
+
 	if (RtlGenRandomPtr)
 		return RtlGenRandomPtr(randomValue, sizeof(*randomValue));
 	
