@@ -1,3 +1,7 @@
+drkns 23.06.2016 22:46:27 +0200 - build 4722
+
+1. Уточнение 4710.
+
 drkns 23.06.2016 21:09:03 +0200 - build 4721
 
 1. Новый параметр: far:config -> System.Executor.Comspec, определяет используемый командный процессор (по умолчанию %comspec%).
